--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:theme="@style/Theme.Pokedex"
         tools:targetApi="31">
         <activity
-            android:name=".view.LoginRegisterOnboarding"
+            android:name=".ui.LoginRegisterOnboarding"
             android:exported="false" />
         <activity
-            android:name=".view.OnboardingActivity"
+            android:name=".ui.OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Pokedex.SplashScreen">
             <intent-filter>
