--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.Pokedex"
         tools:targetApi="31">
         <activity
-            android:name=".ui.LoginRegisterOnboarding"
+            android:name=".ui.fragments.LoginAndRegisterOnboardingFragment"
             android:exported="false" />
         <activity
-            android:name=".ui.OnboardingActivity"
+            android:name=".ui.OnboardingFragment"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
