--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'org.jetbrains.kotlin.kapt' version '1.7.21' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.5.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
